--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,3 +134,21 @@
 .pac-icon {
   margin-top: 4px;
 }
+
+/* --------------------------------------------------- */
+/* HIDE NUMBER INPUT SPINNERS                         */
+/* --------------------------------------------------- */
+
+/* Hide spinners for Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide spinners for Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
